# emojext

./: README.md  pyproject.toml  setup.py
emojext/: __init__.py  emojext.py  model.py
