[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emojext"
version = "0.1.0"
description = "Extract and react to emojis in Discord messages"
authors = [
  { name="YorukazeLURU", email="LURU@yorukaze.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "discord.py>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/yorukaze-luru/emojext"
